--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Web Site By Fahim</title>
+  <title>A Simple Project By Fahim</title>
+  <link rel="shortcut icon" href="https://ibb.co/30WDDFW" type="image/x-icon">
   <link rel="stylesheet" href="css/bootstrap/bootstrap.css">
   <link rel="stylesheet" href="./css/style.css">
 </head>
